Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24846

Missing "Edit Checks as String..." for clazy

XMLWordPrintable

    • 4dba2a2f8 (master)

      The UI for configuring clang-tidy checks includes a Edit Checks as String... plus a use .clang-tidy configuration file. Both options would also be useful for clazy checks.

       

      If we had those, it would be easier to share the checks between members of a project.

        For Gerrit Dashboard: QTCREATORBUG-24846
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            blackie Jesper K. Pedersen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes