ClangTools: Add "edit as string" feature also for clazy

Fixes: QTCREATORBUG-24846
Change-Id: Id9931c0539ff1e03ab9cac7fb9b76f9694250536
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>